--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^3.10.0",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -42,6 +47,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.6.2",
     "input-otp": "^1.4.2",
